--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "react-dev": "webpack --mode=development --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "seed": "node database/seeding.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
