--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,18 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@4.1.0
-
-workflows:
-  test:
-    jobs:
-      - node/test
+jobs:
+  build:
+    docker:
+      - image: circleci/node:12.18.2
+      - image: circleci/mongo:4.2.0
+  steps:
+    - checkout
+    - run:
+        name: Install npm
+        command: npm install
+    - run:
+        name: Seed database
+        command: npm run seed
+    - run:
+        name: Test
+        command: npm run test
