--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dev": "webpack --mode=development --watch",
     "server-dev": "nodemon server/server.js",
     "seed": "node database/seeding.js",
-    "test": "jest --detectOpenHandles --passWithNoTests --runInBand --updateSnapshot"
+    "test": "jest --detectOpenHandles --passWithNoTests --runInBand --updateSnapshot --forceExit"
   },
   "dependencies": {
     "axios": "^0.21.1",
