--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "body-parser": "^1.19.0",
     "brotli-webpack-plugin": "^1.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
+    "dotenv-webpack": "^7.0.2",
     "expect.js": "^0.3.1",
     "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
